<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MerahMuda"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mImageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mart_logo"
        app:civ_border_color="@color/Merah"
        app:civ_border_width="3dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/welcome"
        android:textSize="@dimen/font_25sp" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/menu"
        android:textColor="@color/Putih"
        android:textSize="@dimen/font_20sp"
        android:onClick="onClickMenuMM"
        />

    <Button
        android:id="@+id/button_pesan"
        android:onClick="onClickPesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/pesan"
        android:textColor="@color/Putih"
        android:textSize="@dimen/font_20sp" />
</LinearLayout>